--- a/abf-statracker/package.json
+++ b/abf-statracker/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^2.0.0",
     "angularfire2": "^5.0.0-rc.5-next",
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
