--- a/abf-statracker/package.json
+++ b/abf-statracker/package.json
@@ -19,12 +19,13 @@
     "@angular/http": "^5.0.0",
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/router": "^5.0.0",
+    "@angular/router": "^5.2.10",
     "@ng-bootstrap/ng-bootstrap": "^2.0.0",
     "angularfire2": "^5.0.0-rc.5-next",
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
     "firebase": "4.8.0",
+    "router": "^1.3.2",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
